<resources>
    <string name="app_name">Notes</string>
    <string name="chose_type_dialog_text">Chose type</string>
    <string name="create_folder_text">Create folder</string>
    <string name="search_hint">Search</string>
    <string name="saved_text">Saved</string>
    <string name="folders">All folders</string>
    <string name="settings">Settings</string>
    <string name="help_me">Help me</string>
    <string name="trash">Trash</string>
    <string name="buy">Subscribe</string>
    <string name="sorting_type_string">Chose sorting type</string>
    <string name="sort_by_names">Sort by names</string>
    <string name="sort_by_data_changed">Sort by data changed</string>
    <string name="sort_by_data_created">Sort by data created</string>
    <string name="sort_by_move">Sort by move</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="untitled">Untitled</string>
    <string name="load_preview_image_here">Load preview image here</string>
    <string name="paste_link_here_hint">paste link here</string>
</resources>