<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/grey_60"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="2"/>

        <TextView
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sorting_type_string"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <ImageButton
            android:id="@+id/ibCloseSortDialog"
            android:background="?selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/close_36"
            android:layout_marginRight="@dimen/margin_small"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/margin_small">
            <TextView
                android:id="@+id/tvSortByNames"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:textSize="24sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_by_names"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tvSortByDataCreated"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:textSize="24sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_by_data_created"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tvSortByDataChanged"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:textSize="24sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_by_data_changed"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tvSortByMove"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:textSize="24sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_by_move"
                android:layout_weight="1"/>
        </LinearLayout>

        <RadioGroup
            android:id="@+id/rgSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/rbSortByNames"
                android:button="@drawable/selector_radio_button"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/rbSortByDataCreated"
                android:button="@drawable/selector_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/rbSortByDataChanged"
                android:button="@drawable/selector_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/rbSortByMove"
                android:button="@drawable/selector_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>
    </LinearLayout>



</LinearLayout>